--- a/views/template/index.html
+++ b/views/template/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="contentBx">
               <h3>{{ .config.Site.Name }}</h3>
-              <p>世界这么大，我想去看看有没有塑料瓶。</p>
+              <p>{{.yiyan}}</p>
             </div>
           </div>
           <ul class="sci">
