目录结构调整

--- a/views/template/index.html
+++ b/views/template/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="{{.config.Site.Keywords}}" />
     <link
       rel="shortcut icon"
-      href="/static/images/favicon.ico"
+      href="/static/images/favicon.svg"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="/static/css/style.css" />
