优化音乐解析目录结构

--- a/views/template/index.html
+++ b/views/template/index.html
@@ -27,7 +27,9 @@
               />
             </div>
             <div class="contentBx">
-              <h3>{{ .config.Site.Name }}</h3>
+              <a href="{{ .config.Site.Url }}" target="_blank">
+                <h3>{{ .config.Site.Name }}</h3>
+              </a>
               <p>{{.yiyan}}</p>
             </div>
           </div>
